--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 450px) {
    .text-large{
-    width: max-content;
+    width:100%;
     margin: auto;
    }
   .logo-facebook,.logo-google,.logo-apple{
