--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  height: 100vh;
 }
 a{
   color: var(--color-blue);
